# prisma

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  README_EN.md  client.example.toml  install.ps1  install.sh  server.example.toml
.github/workflows/: bench_prisma_vs_xray.sh  benchmark.yml  ci.yml  docker.yml  docs.yml  release.yml
prisma-cli/: Cargo.toml
prisma-cli/src/: api_client.rs  config_ops.rs  dashboard.rs  diagnostics.rs  init.rs  main.rs  routes.rs
prisma-client/: Cargo.toml
prisma-client/src/: connection_pool.rs  connector.rs  dns_resolver.rs  dns_server.rs  forward.rs  grpc_stream.rs  lib.rs  proxy.rs  relay.rs  transport_selector.rs  tunnel.rs  udp_relay.rs  ws_stream.rs  xhttp_stream.rs  xporta_stream.rs
prisma-client/src/http/: server.rs
prisma-client/src/socks5/: server.rs
prisma-client/src/tun/: device.rs  handler.rs  mod.rs
prisma-core/: Cargo.toml
prisma-core/src/: entropy.rs  error.rs  lib.rs  logging.rs  salamander.rs  state.rs  traffic_shaping.rs  types.rs  util.rs
prisma-core/src/config/: client.rs  mod.rs  server.rs  validation.rs
prisma-core/src/crypto/: aead.rs  kdf.rs  mod.rs  padding.rs
prisma-core/src/dns/: mod.rs
prisma-core/src/geodata/: mod.rs
prisma-core/src/prisma_fp/: builder.rs  ja3.rs
prisma-core/src/protocol/: anti_replay.rs  codec.rs  frame_encoder.rs  handshake.rs  mod.rs  types.rs
prisma-core/src/router/: mod.rs
prisma-core/src/utls/: mod.rs
prisma-core/src/xporta/: encoding.rs  reassembler.rs  types.rs
prisma-core/tests/: config_tests.rs  integration.rs  protocol_proptest.rs  protocol_snapshots.rs
prisma-core/tests/snapshots/: protocol_snapshots__client_hello_wire.snap  protocol_snapshots__data_frame_connect_wire.snap  protocol_snapshots__data_frame_data_wire.snap  protocol_snapshots__data_frame_domain_connect_wire.snap  protocol_snapshots__server_accept_wire.snap  protocol_snapshots__server_hello_wire.snap
prisma-dashboard/: README.md  package-lock.json  package.json
prisma-dashboard/src/app/: layout.tsx  providers.tsx
prisma-dashboard/src/app/dashboard/: layout.tsx  page.tsx
prisma-dashboard/src/app/login/: page.tsx
prisma-dashboard/src/components/backups/: backup-table.tsx
prisma-dashboard/src/components/clients/: client-form.tsx  client-table.tsx  key-display.tsx
prisma-dashboard/src/components/dashboard/: connection-table.tsx  metrics-cards.tsx  traffic-chart.tsx
prisma-dashboard/src/hooks/: use-logs.ts  use-metrics.ts
prisma-dashboard/src/lib/: api.ts  auth.ts  types.ts  utils.ts  ws.ts
prisma-docs/: docusaurus.config.ts  package-lock.json  package.json
prisma-docs/docs/: cli-reference.md  getting-started.md  installation.md  introduction.md  troubleshooting.md
prisma-docs/docs/configuration/: client.md  server.md
prisma-docs/docs/deployment/: cloudflare-cdn.md  config-examples.md  docker.md  linux-systemd.md
prisma-docs/docs/features/: benchmarks.md  dashboard.md  management-api.md  routing-rules.md  xhttp-transport.md  xporta-transport.md
prisma-docs/docs/security/: anti-replay-padding.md  cryptography.md  prismaveil-protocol.md
prisma-docs/i18n/zh-Hans/: code.json
prisma-docs/src/css/: custom.css
prisma-docs/src/pages/: benchmarks.module.css  benchmarks.tsx  index.module.css  index.tsx
prisma-docs/static/data/: benchmark-results.json
prisma-mgmt/: Cargo.toml
prisma-mgmt/src/: auth.rs  lib.rs  router.rs
prisma-mgmt/src/handlers/: backup.rs  clients.rs  config.rs  connections.rs  forwards.rs  health.rs  mod.rs  routes.rs  system.rs
prisma-mgmt/src/ws/: logs.rs  metrics.rs
prisma-server/: Cargo.toml
prisma-server/src/: auth.rs  camouflage.rs  channel_stream.rs  forward.rs  grpc_stream.rs  handler.rs  lib.rs  outbound.rs  relay.rs  state.rs  udp_relay.rs  ws_stream.rs  xhttp_stream.rs  xporta_stream.rs
prisma-server/src/bandwidth/: limiter.rs  quota.rs
prisma-server/src/listener/: cdn.rs  grpc_tunnel.rs  mod.rs  quic.rs  reality.rs  reverse_proxy.rs  tcp.rs  xhttp.rs  xporta.rs
scripts/: benchmark.sh
(+46 files in other folders)
