[workspace]
members = ["prisma-core", "prisma-server", "prisma-client", "prisma-cli", "prisma-mgmt"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Runtime
tokio = { version = "1", features = ["full"] }

# QUIC
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"

tokio-rustls = "0.26"

# Crypto
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
blake3 = "1"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }

# Config
config = "0.14"
garde = { version = "0.20", features = ["derive", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Cache
moka = { version = "0.12", features = ["future"] }

# Web framework
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Middleware
tower = { version = "0.5", features = ["full"] }

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Bytes
bytes = "1"

# Dev
proptest = "1"
insta = { version = "1", features = ["yaml"] }
tokio-test = "0.4"
rcgen = "0.13"
